myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  type: LoadBalancer
