myvirtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        exact: /time
    route:
    - destination:
        host: my-service
        port:
          number: 80
  - match:
    - uri:
        exact: /statistics
    route:
    - destination:
        host: my-service
        port:
          number: 80
